@@ -24,63 +24,64 @@ using MySql.Data.MySqlClient;
 
 namespace MySql.Data.Types
 {
-	/// <summary>
-	/// Summary description for MySqlInt32.
-	/// </summary>
-	internal class MySqlUInt32 : MySqlValue
-	{
-		private uint	mValue;
+    /// <summary>
+    /// Summary description for MySqlInt32.
+    /// </summary>
+    internal class MySqlUInt32 : MySqlValue
+    {
+        private uint mValue;
 
-		public MySqlUInt32(MySqlDbType type) : base()
-		{
-			mySqlDbType = type;
-		}
+        public MySqlUInt32(MySqlDbType type)
+            : base()
+        {
+            mySqlDbType = type;
+        }
 
-		internal override void Serialize(PacketWriter writer, bool binary, object value, int length)
-		{
-			uint v = Convert.ToUInt32( value );
-			if (binary)
-				writer.Write( BitConverter.GetBytes( v ) );
-			else
-				writer.WriteStringNoNull( v.ToString() );
-		}
+        internal override void Serialize(PacketWriter writer, bool binary, object value, int length)
+        {
+            uint v = Convert.ToUInt32(value);
+            if (binary)
+                writer.Write(BitConverter.GetBytes(v));
+            else
+                writer.WriteStringNoNull(v.ToString());
+        }
 
-		public uint Value
-		{
-			get { return mValue; }
-			set { mValue = value; objectValue = value; }
-		}
+        public uint Value
+        {
+            get { return mValue; }
+            set { mValue = value; objectValue = value; }
+        }
 
-		internal override Type SystemType
-		{
-			get { return typeof(UInt32); }
-		}
+        internal override Type SystemType
+        {
+            get { return typeof(UInt32); }
+        }
 
-		internal override string GetMySqlTypeName()
-		{
-			return "INT";
-		}
+        internal override string GetMySqlTypeName()
+        {
+            return "INT";
+        }
 
-		internal override MySqlValue ReadValue( PacketReader reader, long length )
-		{
-			if (length == -1) 
-			{
-				if (mySqlDbType == MySqlDbType.Int24)
-					Value = (uint)reader.ReadInteger( 3 );
-				else
-					Value = (uint)reader.ReadLong( 4  );
-			}
-			else 
-			{
-				string value = reader.ReadString( length );
-				Value = UInt32.Parse( value );
-			}
-			return this;
-		}
+        internal override MySqlValue ReadValue(PacketReader reader, long length)
+        {
+            if (length == -1)
+            {
+                if (mySqlDbType == MySqlDbType.Int24)
+                    Value = (uint)reader.ReadInteger(3);
+                else
+                    Value = (uint)reader.ReadLong(4);
+            }
+            else
+            {
+                string value = reader.ReadString(length);
+                Value = UInt32.Parse(value);
+            }
+            return this;
+        }
 
-		internal override void Skip(PacketReader reader)
-		{
-			reader.Skip(4);
-		}
-	}
+        internal override void Skip(PacketReader reader)
+        {
+            reader.Skip(4);
+        }
+    }
 }
