@@ -9,6 +9,7 @@ Version 1.0.9
     Bug #18186 Problem with implementation of PreparedStatement 
     Bug #24565 Inferring DbType fails when reusing commands and the first time the value is nul 
 	Bug #24661 mysql-connector-net-5.0.2-beta Driver.IsTooOld() Error.... 
+	Bug #23862 Problem with CommandBuilder 'GetInsertCommand' method 
 		
     Other changes
     -------------
